<?xml version="1.0"?>
<package format="2">

  <name>heading_estim_test</name>
  <version>1.0.0</version>
  <description>the heading estimator test package</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>nodelet</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>dynamic_reconfigure</depend>

  <export>

    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
